# recipi

./: .eslintrc.json  .gitignore  README.md  drizzle.config.ts  mdx-components.tsx  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/(home)/: layout.tsx  page.tsx
app/_actions/: revalidateAction.ts
app/create/: page.tsx  (+1 more)
components/: AddNoteModal.tsx  ClientPagintation.tsx  DeleteRecipeButton.tsx  EditIngredientItem.tsx  EditInstructionItem.tsx  EditPreviewTabs.tsx  FancyBox.tsx  FancyMultiSelect.tsx  FormInput.tsx  IngredientUnitSelect.tsx  IngredientsList.tsx  InstructoinsList.tsx  MainNav.tsx  MobileNav.tsx  PreviewIngredientItem.tsx  RecipeCard.tsx  RecipeForm.tsx  RecipeList.tsx  Search.tsx  ServerPagination.tsx  SortableItem.tsx  TimeInput.tsx  UserAvatar.tsx
config/: admin.ts  default.ts
hooks/: use-menu-query.tsx  use-recipe-query.tsx  use-resizable-observer.tsx
lib/: auth.ts  constants.ts  utils.ts
providers/: FeatureFlagProvider.tsx
recipi-next/: .env.development.local.example  .env.example  .env.local.example  .env.production.local.example  .prettierrc  README.md  drizzle.config.ts  mdx-components.tsx  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
rusty-recipi/: .gitignore  README.md
rusty-recipi/ingredients/: Cargo.toml
rusty-recipi/ingredients/src/: Cargo.toml  data_access.rs  example.json  ingredient.rs  main.rs
types/: api.d.ts  index.ts  schema.d.ts  site.d.ts  url-params.d.ts
utils/: QueryProvider.tsx  featureFlags.ts
(+387 files in other folders)
