[package]
name = "ingredients"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.24", features = ["serde"] }
color-eyre = "0.6.2"
dotenvy = "0.15"
native-tls = "0.2.11"
serde = "1.0.196"
serde_json = "1.0.48"
sqlx = {version = "0.7", default-features = false, features = ["runtime-async-std", "macros", "mysql", "time", "json", "chrono", "tls-native-tls"]}
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"